--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,26 +12,36 @@ ul>a{
 }
 
 ul{
-    position: fixed;
-    right: 0%;
-    top: 0%;
     list-style: none;
-    color: purple
+    color: purple;
+
 
 }
 
 header{
     background-color: white;
+    position: fixed;
+    top: 0%;
+    right: 0%;
+    left: 0%;
+    display: flex;
+    justify-content: space-between;
+
+
+
+
 
 }
 
 section{
     background-color: white;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-left: 250px;
     margin-right: 250px;
     margin-bottom: 20px;
     padding-bottom: 1px;
+    padding-top: 1px;
+
 }
 
 h1{
